# fisea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml  simplest.ps1
.github/: prepare_linux.sh
.github/workflows/: ClSetup  CudartSetup  NVCCSetup  build.yml  buildcuda.yml  conda.yml  nvcc.yml  release.yml  release_pypi.yml  simplest.yml
Actions/CLEXE/: CMakeLists.txt  simplest.cpp  simplest.ps1
Actions/NVCC/: CMakeLists.txt  simplest.cu  simplest.ps1
Actions/NVCC/Downloads/: dowloading.ps1
conda.recipe/: meta.yaml
fisea/: __init__.py
fisea/_C/: Activation.h  FloatTensor.cpp  FloatTensor.cu  FloatTensor.h  FunctionBase.cpp  FunctionBase.h  Helper.h  ReLU.cpp  ReLU.h  TensorBase.cpp  TensorBase.h  Type.cu  const.h  handler.cuh  handler.h  helper.cuh  main.cpp  memory.cuh  pybind.cpp  random.h  tenmem.h  type.cpp  type.h
fisea/_C/functional/: basickr.cu  basickr.cuh  fnbind.h  kernel.cu  kernel.cuh  pybind.cpp  relu.cu  relu.cuh  testfn.cpp  testfn.cu  testfn.cuh  testfn.h
fisea/_C/tensor/: Tensor.cpp  Tensor.cu  Tensor.h  bindings.h  pybind.cpp  tebind.h
fisea/functional/: __init__.py  __init__.pyi  _extension.cpp  testfn.cu  testfn.h
tests/: test_basic.py
tools/: prepare_linux.sh  prepare_windows.sh
